# HeatFlow

./: .gitignore  CMakeLists.txt  README.md  main.py  requirements.txt  setup.py  test.py
.github/workflows/: publish.yml  python-package.yml
examples/: mnist_model.py
heatflow/: __init__.py  _tensor.py  ops.py  tensor.py  utils.py
heatflow/nn/: __init__.py  functional.py  parameter.py
heatflow/nn/modules/: linear.py  module.py
heatflow/ops/: basics.py  tensor_ops.py
heatflow/opss/: basics.py  tensor_ops.py
heatflow/optim/: __init__.py  adagrad.py  sgd.py
heatflow/tools/datasets/: get_datasets.py  mnist.py
src/: main.cpp
src/tensor/: tensor.cpp  tensor.hpp
tests/: functional_testing.py  ops_test.py  ops_testing.py  tensor.py
